non-oss/pharos_pro/addons/kontena-stats/resources/06-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: kontena-stats
  annotations:
    prometheus.io/scrape: 'true'
spec:
  type: ClusterIP
  selector:
    name: prometheus
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 9090
