non-oss/pharos_pro/addons/kontena-stats/resources/11-node-exporter-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  namespace: kontena-stats
  annotations:
    prometheus.io/scrape: 'true'
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    name: node-exporter
    phase: prod
  ports:
    - name: metrics
      protocol: TCP
      port: 80
      targetPort: 9100
