non-oss/pharos_pro/addons/kontena-stats/resources/14-kube-state-metrics-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: kontena-stats
  labels:
    name: kube-state-metrics
  annotations:
    prometheus.io/scrape: 'true'
spec:
  ports:
  - name: metrics
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    name: kube-state-metrics
