non-oss/pharos_pro/addons/kontena-stats/resources/17-rbac-proxy-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rbac-proxy
  name: rbac-proxy
  namespace: kontena-stats
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: rbac-proxy
